FIX: wrap form around input and replace querySelectors with useRef

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -22,6 +22,9 @@
     align-items: center;
 
     .imgCol {
+      display: flex;
+      justify-content: center;
+
       img {
         display: block;
         height: auto;
